# deep-learning-library

./: .gitignore  CMakeLists.txt  LICENSE  README.md  autogradient_design  autogradient_design.cpp  compilation.sh  data_reader.cpp  data_reader.hpp  example.cpp  new_design.cpp  operations.cpp  views.cpp
.github/: CONTRIBUTING.md
.github/workflows/: main.yml
cmake/: CMakeLists.txt  cabernet-config.cmake.in
examples/: CMakeLists.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cabernet-examples-layers  criterions.cpp  functions.cpp  install_manifest.txt  layers.cpp  model.cpp  operations.cpp
examples/cmake/: Makefile  cabernet-config-version.cmake  cabernet-config.cmake
examples/tests/: CTestTestfile.cmake  Makefile  cabernetTests
in-process/: README.md  a.out  data_reader.cpp  data_reader_bin.cpp  idea.cpp  read_mnist.cpp  usless_datareader.hpp  usless_dataset.hpp  usless_distribution.hpp  usless_normalizers.hpp
include/: CaberNet.h  functions.h  tensor.h
include/CaberNet/: criterions.h  dataset.h  functions.h  initializers.h  layers.h  model.h  optimizers.h  subscripts.h  tensor.h
include/CaberNet/layers/: dense.h  layer.h  relu.h
include/CaberNet/statistics/: distributions.h
include/CaberNet/tensor/: tensor_float.h  tensor_float32.h  tensor_int.h  tensor_int16.h
src/: README.md  criterions.cpp  functions.cpp  layers.cpp  optimizers.cpp  subscripts.cpp  tensor.cpp
src/internals/: config.h  internal_array.hpp  internal_array_map.cpp  internal_array_operations.cpp  internal_base.hpp  internal_buffer.hpp  internal_expression.hpp  internal_graph.hpp  internal_tensor.hpp
src/internals/criterions/: internal_criterion_nllloss.cpp  internal_criterions.hpp
src/internals/functions/: internal_encoding.hpp  internal_function_linear.cpp  internal_function_linear.h  internal_function_logsoftmax.cpp  internal_function_logsoftmax.h  internal_function_relu.cpp  internal_function_relu.h  internal_function_softmax.cpp  internal_function_softmax.h  internal_functions.hpp
src/internals/operations/: internal_operation_addition.cpp  internal_operation_addition.h  internal_operation_matmul.cpp  internal_operation_matmul.h  internal_operation_multiplication.cpp  internal_operation_multiplication.h  internal_operations.hpp
src/internals/optimizers/: internal_optimizer_sgd.cpp  internal_optimizers.hpp
src/tensor/: tensor_float.cpp  tensor_float32.cpp  tensor_int.cpp  tensor_int16.cpp
src/tensor-core/: config.h  internal_array.hpp  internal_array_operations.cpp  internal_buffer.hpp  internal_expression.hpp  internal_operations.cpp  internal_operations.hpp  internal_tensor.hpp
src/tensor-core/functions/: internal_function_linear.cpp  internal_function_linear.h
src/tensor-core/operations/: internal_operation.hpp  internal_operation_addition.cpp  internal_operation_addition.h  internal_operation_matmul.cpp  internal_operation_matmul.h  internal_operation_multiplication.cpp  internal_operation_multiplication.h
src/tensor-internals/: internal_array.hpp  internal_tensor.hpp  internal_types.h
src/tensor-internals/functions/: internal_function_linear.cpp  internal_function_softmax.cpp  internal_functions_inplace.h
src/tensor-internals/operations/: internal_operation.hpp  internal_operation_addition.cpp  internal_operation_matmul.h
tests/: CMakeLists.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  a.out  criterions.cpp  function_softmax.cpp  functions.cpp  install_manifest.txt  one_hot_encode.cpp  operations.cpp  optimizers.cpp  subscripts.cpp  tmp.cpp
tests/cmake/: Makefile
tests/tests/: CTestTestfile.cmake  Makefile  cabernetTests
